# mp2-lab5-polinoms

listlib/: CMakeLists.txt
