file(GLOB hdrs "*.h") #Добавляем в переменную hdrs все файлы с расширением .h

add_library(${listlib} STATIC main.cpp ${hdrs}) #Создаем статическую библиотеку с именем из переменной ${MyLib1}, объявленной в родительском CMake файле (локальные переменные переносятся в наследников), в неё добавляются файлы из переменных ${srcs} и ${hdrs}

